Fixing bug on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,8 @@ p {
     background-color: white;
     padding-top: 20px;
     height: 200px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 #fullURL {
